# pytorch_webgpu_backend

./: .gitignore  CMakeLists.txt  DESIGN.md  README.md  requirements.txt  setup.py  vcpkg-configuration.json  vcpkg.json
include/: webgpu_backend.hpp
include/data_transfer/: data_transfer_manager.hpp  tcp_transfer.hpp
include/webgpu_compute/: webgpu_compute.hpp
include/webgpu_compute/webgpu_listener/: webgpu_tcp_listener.hpp
src/: webgpu_backend.cpp
src/data_transfer/: data_transfer_manager.cpp  tcp_transfer.cpp
src/webgpu_compute/: webgpu_compute.cpp
src/webgpu_compute/webgpu_listener/: listener_main.cpp  webgpu_tcp_listener.cpp
